step back process is added

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 170,
    "id": "07224099",
    "metadata": {},
    "outputs": [],
@@ -16,9 +16,9 @@
     "from langchain_community.document_loaders import WebBaseLoader\n",
     "from langchain_community.vectorstores import Chroma\n",
     "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
-    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_core.runnables import RunnablePassthrough,RunnableLambda\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.prompts import ChatPromptTemplate, FewShotChatMessagePromptTemplate\n",
     "import tiktoken\n",
     "from langchain.load import loads, dumps\n",
     "from operator import itemgetter\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 116,
    "id": "65029e8a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 117,
    "id": "f53f226c",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 118,
    "id": "f71841bc",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 119,
    "id": "b736680c",
    "metadata": {},
    "outputs": [
@@ -122,17 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 120,
    "id": "d96de6a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "126"
+       "189"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 121,
    "id": "6e4d1167",
    "metadata": {},
    "outputs": [
@@ -165,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 122,
    "id": "1c586aa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Task decomposition is a technique used to break down complex tasks into smaller and simpler steps, making them more manageable. It involves transforming big tasks into multiple manageable tasks and shedding light on the model's thinking process. This can be done through prompting techniques like Chain of Thought (CoT) or Tree of Thoughts, as well as using task-specific instructions or relying on external classical planners.\""
+       "'Task decomposition is a technique used to break down complex tasks into smaller and simpler steps, making them more manageable. This process can be done through prompting techniques like Chain of Thought (CoT) or Tree of Thoughts, task-specific instructions, or with the help of external classical planners like in the LLM+P approach.'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 123,
    "id": "e75c9966",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 124,
    "id": "4b7a5a84",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "18"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 125,
    "id": "fe3f3dcd",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 126,
    "id": "09b17c7f",
    "metadata": {},
    "outputs": [],
@@ -257,17 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 127,
    "id": "63e59883",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.9074394698045489)"
+       "np.float64(0.9074268061127665)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 128,
    "id": "7d507ce6",
    "metadata": {},
    "outputs": [],
@@ -295,17 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 129,
    "id": "20e1d8f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task decomposition in a LLM-powered autonomous agent system involves breaking down complex tasks into smaller, more manageable subgoals. This process enables the agent to efficiently handle intricate tasks by dividing them into simpler steps. Task decomposition can be achieved through various methods such as prompting the LLM with specific instructions, using task-specific prompts, or incorporating human inputs. Additionally, external classical planners can be utilized for long-horizon planning, where the LLM translates the problem into a planning domain definition language, requests a classical planner to generate a plan, and then translates the plan back into natural language. This approach outsources the planning step to an external tool, which is common in certain robotic setups.'"
+       "'Task decomposition in a LLM-powered autonomous agent system involves breaking down large tasks into smaller, more manageable subgoals. This process enables the agent to efficiently handle complex tasks by dividing them into simpler steps. Task decomposition can be achieved through various methods, such as using simple prompting for LLM, task-specific instructions, or human inputs. By breaking down tasks into smaller components, the agent can effectively plan and execute its actions to achieve the overall goal.'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,17 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 130,
    "id": "65b27a9d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task decomposition is a technique used by agents to break down complex tasks into smaller and simpler steps. This process allows the agent to better plan and execute the task by dividing it into more manageable components. Techniques like Chain of Thought and Tree of Thoughts are examples of methods that help in task decomposition by breaking down big tasks into multiple smaller tasks or exploring multiple reasoning possibilities at each step.'"
+       "\"Task decomposition is a technique used by agents to break down complex tasks into smaller and simpler steps. This process involves transforming big tasks into multiple manageable tasks, allowing the agent to plan ahead and interpret the model's thinking process. Techniques such as Chain of Thought (CoT) and Tree of Thoughts extend task decomposition by exploring multiple reasoning possibilities at each step and generating multiple thoughts per step, creating a tree structure.\""
       ]
      },
-     "execution_count": 81,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 131,
    "id": "110104ed",
    "metadata": {},
    "outputs": [],
@@ -391,17 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 132,
    "id": "65fdd89d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task decomposition for LLM agents involves breaking down complex tasks into smaller and simpler steps using techniques such as Chain of Thought (CoT) and Tree of Thoughts. This process helps the agent to utilize more test-time computation and enhance model performance on complex tasks by transforming big tasks into multiple manageable tasks. Additionally, task decomposition for LLM agents can also be achieved through simple prompting, task-specific instructions, or by relying on an external classical planner for long-horizon planning.'"
+       "'Task decomposition for LLM agents involves breaking down complex tasks into smaller and simpler steps using techniques like Chain of Thought (CoT) and Tree of Thoughts. Additionally, LLM agents can also rely on external classical planners for long-horizon planning using the Planning Domain Definition Language (PDDL) as an intermediate interface.'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,17 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 133,
    "id": "cf8d5dea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task decomposition for LLM agents involves breaking down complex tasks into smaller and simpler steps using techniques such as prompting, task-specific instructions, and human inputs. Additionally, there is an approach called LLM+P that involves outsourcing the planning step to an external classical planner, which utilizes the Planning Domain Definition Language (PDDL) to describe the planning problem and generate a plan that is then translated back into natural language.'"
+       "'Task decomposition for LLM agents involves breaking down complex tasks into smaller and simpler steps using techniques such as prompting, task-specific instructions, and human inputs. Additionally, a distinct approach known as LLM+P involves outsourcing the planning step to an external classical planner that utilizes the Planning Domain Definition Language (PDDL) to describe the planning problem and generate a plan that is then translated back into natural language. This allows LLM agents to effectively plan and execute tasks by leveraging external tools and domain-specific knowledge.'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 134,
    "id": "ac7af1dd",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 135,
    "id": "4fe62571",
    "metadata": {},
    "outputs": [],
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "31fed5f4",
    "metadata": {},
    "outputs": [],
@@ -617,17 +617,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 137,
    "id": "8eb464be",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"The main components of an LLM-powered autonomous agent system include the LLM acting as the agent's brain, with functions like planning, subgoal decomposition, reflection, and refinement. The natural language interface between the LLM and external components like memory and tools is crucial for reliable communication. The agent can also utilize short-term memory for in-context learning and long-term memory for retaining and recalling information over extended periods.\""
+       "'The main components of an LLM-powered autonomous agent system include the LLM as the core controller, planning for task breakdown, subgoal decomposition for task management, reflection for self-criticism and learning, refinement for problem-solving enhancement, and memory for information storage and retrieval. These components work together to enable the autonomous agent system to function effectively, solve complex problems, and achieve autonomy in decision-making and task execution.'"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,9 +686,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1e1b38c",
+   "metadata": {},
+   "source": [
+    "#### Step Back"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "7997b2fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples = [\n",
+    "    {\n",
+    "        \"input\": \"Could the members of The Police perform lawful arrests?\",\n",
+    "        \"output\": \"what can the members of The Police do?\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"input\": \"Jan Sindel’s was born in what country?\",\n",
+    "        \"output\": \"what is Jan Sindel’s personal history?\",\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "example_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"human\",\"{input}\"),\n",
+    "    (\"ai\",\"{output}\")\n",
+    "])\n",
+    "\n",
+    "few_shot_prompt = FewShotChatMessagePromptTemplate(\n",
+    "    example_prompt=example_prompt,\n",
+    "    examples=examples,\n",
+    ")\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\n",
+    "     \"system\", \"\"\"You are an expert at world knowledge. Your task is to step back and paraphrase a question to a more generic step-back question, which is easier to answer. Here are a few examples:\"\"\",   \n",
+    "    ),\n",
+    "    few_shot_prompt,\n",
+    "    (\"user\",\"{question}\")\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# # Testing\n",
+    "generate_queries_step_back = (prompt|llm|StrOutputParser())\n",
+    "# generate_queries_step_back\n",
+    "\n",
+    "response_prompt_template = \"\"\"You are an expert of world knowledge. I am going to ask you a question. Your response should be comprehensive and not contradicted with the following context if they are relevant. Otherwise, ignore them if they are not relevant.\n",
+    "\n",
+    "# {normal_context}\n",
+    "# {step_back_context}\n",
+    "\n",
+    "# Original Question: {question}\n",
+    "# Answer:\"\"\"\n",
+    "\n",
+    "response_prompt = ChatPromptTemplate.from_template(response_prompt_template)\n",
+    "\n",
+    "chain = (\n",
+    "    {\"normal_context\": itemgetter('question')|retriever,\n",
+    "          \"step_back_context\":generate_queries_step_back |retriever,\n",
+    "          'question': itemgetter('question')}\n",
+    "\n",
+    "          |response_prompt\n",
+    "          |llm|StrOutputParser()\n",
+    "\n",
+    "\n",
+    " )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "360d62e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decomposition in LLM refers to the process of breaking down complex tasks into smaller, more manageable subgoals. This allows the LLM (large language model) to efficiently handle intricate tasks by dividing them into smaller steps. There are several ways in which task decomposition can be achieved within the context of LLM:\n",
+      "\n",
+      "1. **LLM with Simple Prompting**: One approach to task decomposition involves using simple prompts to guide the LLM in breaking down tasks. For example, prompts like \"Steps for XYZ\" or \"What are the subgoals for achieving XYZ?\" can help the LLM organize the task into smaller components.\n",
+      "\n",
+      "2. **Task-Specific Instructions**: Another method is to provide task-specific instructions to the LLM. For instance, instructing the LLM to \"Write a story outline\" when the task involves creating a novel can help in task decomposition tailored to the specific requirements of the task.\n",
+      "\n",
+      "3. **Human Inputs**: Task decomposition can also be achieved through human inputs, where individuals provide guidance or input to the LLM on how to break down the task effectively.\n",
+      "\n",
+      "In addition to these methods, there is a distinct approach known as LLM+P, as proposed by Liu et al. in 2023. This approach involves leveraging an external classical planner for long-horizon planning. The process includes translating the problem into a Planning Domain Definition Language (PDDL), generating a PDDL plan using a classical planner, and then translating the plan back into natural language. This outsourcing of the planning step to an external tool assumes the availability of domain-specific PDDL and a suitable planner, which is common in certain robotic setups.\n",
+      "\n",
+      "Overall, task decomposition in LLM plays a crucial role in enabling the model to effectively tackle complex tasks by breaking them down into smaller, more manageable subgoals.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chain.invoke({'question': \"what is decomposition in LLM\"}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60c40b36",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7997b2fc",
+   "id": "3f7287a6",
    "metadata": {},
    "outputs": [],
    "source": []
