--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -788,15 +788,71 @@
    "cell_type": "markdown",
    "id": "60c40b36",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### HyDE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "3f7287a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task decomposition for LLM agents can be done by using simple prompting like \"Steps for XYZ\", \"What are the subgoals for achieving XYZ?\", task-specific instructions, or with human inputs. Additionally, there is a distinct approach called LLM+P that involves relying on an external classical planner to do long-horizon planning using the Planning Domain Definition Language (PDDL) as an intermediate interface.\n"
+     ]
+    }
+   ],
+   "source": [
+    "template = \"\"\"Please write a scientific paper passage to answer the question\n",
+    "Question: {question}\n",
+    "Passage:\"\"\"\n",
+    "prompt_hyde = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "generate_docs_for_retrieval = (\n",
+    "    prompt_hyde | ChatOpenAI(temperature=0) | StrOutputParser() \n",
+    ")\n",
+    "\n",
+    "# Run\n",
+    "question = \"What is task decomposition for LLM agents?\"\n",
+    "generate_docs_for_retrieval.invoke({\"question\":question})\n",
+    "\n",
+    "retrieval_chain = generate_docs_for_retrieval | retriever \n",
+    "retrieved_docs = retrieval_chain.invoke({\"question\":question})\n",
+    "\n",
+    "template = \"\"\"Answer the following question based on this context:\n",
+    "\n",
+    "{context}\n",
+    "\n",
+    "Question: {question}\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "final_rag_chain = (\n",
+    "    prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "print(final_rag_chain.invoke({\"context\":retrieved_docs,\"question\":question}))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f7287a6",
+   "id": "3a88068e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t"
+   ]
   }
  ],
  "metadata": {
