Logical Routing is added

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 187,
    "id": "07224099",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import os\n",
     "import bs4\n",
     "import numpy as np\n",
-    "from langchain_anthropic import ChatAnthropic\n",
+    "from typing import Literal\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from dotenv import load_dotenv\n",
     "from langchain_community.document_loaders import WebBaseLoader\n",
@@ -19,6 +19,7 @@
     "from langchain_core.runnables import RunnablePassthrough,RunnableLambda\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate, FewShotChatMessagePromptTemplate\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "import tiktoken\n",
     "from langchain.load import loads, dumps\n",
     "from operator import itemgetter\n",
@@ -845,14 +846,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5549375a",
+   "metadata": {},
+   "source": [
+    "#### Routing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "3a9b0bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/pytorch/lib/python3.12/site-packages/langchain_openai/chat_models/base.py:1900: UserWarning: Received a Pydantic BaseModel V1 schema. This is not supported by method=\"json_schema\". Please use method=\"function_calling\" or specify schema via JSON Schema or Pydantic V2 BaseModel. Overriding to method=\"function_calling\".\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/pytorch/lib/python3.12/site-packages/langchain_openai/chat_models/base.py:1913: UserWarning: Cannot use method='json_schema' with model gpt-3.5-turbo-0125 since it doesn't support OpenAI's Structured Output API. You can see supported models here: https://platform.openai.com/docs/guides/structured-outputs#supported-models. To fix this warning, set `method='function_calling'. Overriding to method='function_calling'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RouteQuery(datasource='python_docs')"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class RouteQuery(BaseModel):\n",
+    "    datasource : Literal[\"python_docs\", \"js_docs\", \"golang_docs\"] = Field(\n",
+    "        ...,\n",
+    "        description=\"Given a user Question choose which datasource would be the most relevant for answering their question\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "structured_llm = llm.with_structured_output(RouteQuery)\n",
+    "system_prompt =  \"\"\"You are an expert at routing a user question to the appropriate data source.\n",
+    "\n",
+    "Based on the programming language the question is referring to, route it to the relevant data source.\"\"\"\n",
+    "\n",
+    "question = \"\"\"Why doesn't the following code work:\n",
+    "\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\"human\", \"speak in {language}\"])\n",
+    "prompt.invoke(\"french\")\n",
+    "\"\"\"\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    ('system',system_prompt),\n",
+    "    ('user',\"{question}\")\n",
+    "])\n",
+    "\n",
+    "router = (prompt | structured_llm)\n",
+    "\n",
+    "\n",
+    "result = router.invoke({'question':question})\n",
+    "result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a88068e",
+   "id": "fd068a8a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "t"
-   ]
+   "source": []
   }
  ],
  "metadata": {
