Semantic Routing is added

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 202,
    "id": "07224099",
    "metadata": {},
    "outputs": [],
@@ -18,11 +18,14 @@
     "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
     "from langchain_core.runnables import RunnablePassthrough,RunnableLambda\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.prompts import ChatPromptTemplate, FewShotChatMessagePromptTemplate\n",
+    "from langchain_core.prompts import ChatPromptTemplate, FewShotChatMessagePromptTemplate, PromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "import tiktoken\n",
+    "from langchain.utils.math import cosine_similarity\n",
     "from langchain.load import loads, dumps\n",
     "from operator import itemgetter\n",
+    "\n",
+    "\n",
     "load_dotenv()\n",
     "langchain_api = os.getenv('LANGCHAIN_API_KEY')\n",
     "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
@@ -854,8 +857,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "998a1f5f",
+   "metadata": {},
+   "source": [
+    "##### Logical routing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 200,
    "id": "3a9b0bf4",
    "metadata": {},
    "outputs": [
@@ -872,10 +883,10 @@
     {
      "data": {
       "text/plain": [
-       "RouteQuery(datasource='python_docs')"
+       "'chain for python_docs'"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,13 +920,81 @@
     "\n",
     "\n",
     "result = router.invoke({'question':question})\n",
-    "result"
+    "\n",
+    "def choose_route(result):\n",
+    "    if \"python_docs\" in result.datasource.lower():\n",
+    "        ### Logic here \n",
+    "        return \"chain for python_docs\"\n",
+    "    elif \"js_docs\" in result.datasource.lower():\n",
+    "        ### Logic here \n",
+    "        return \"chain for js_docs\"\n",
+    "    else:\n",
+    "        ### Logic here \n",
+    "        return \"golang_docs\"\n",
+    "\n",
+    "from langchain_core.runnables import RunnableLambda\n",
+    "\n",
+    "full_chain = router | RunnableLambda(choose_route)\n",
+    "full_chain.invoke({\"question\": question})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c46e1d0",
+   "metadata": {},
+   "source": [
+    "##### Semantic routing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd068a8a",
+   "id": "4fb061cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "physics_template = \"\"\"You are a very smart physics professor. \\\n",
+    "You are great at answering questions about physics in a concise and easy to understand manner. \\\n",
+    "When you don't know the answer to a question you admit that you don't know.\n",
+    "\n",
+    "Here is a question:\n",
+    "{query}\"\"\"\n",
+    "\n",
+    "math_template = \"\"\"You are a very good mathematician. You are great at answering math questions. \\\n",
+    "You are so good because you are able to break down hard problems into their component parts, \\\n",
+    "answer the component parts, and then put them together to answer the broader question.\n",
+    "\n",
+    "Here is a question:\n",
+    "{query}\"\"\"\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "prompt_templates = [physics_template,math_template]\n",
+    "prompt_embeddings = embeddings.embed_documents(prompt_templates)\n",
+    "\n",
+    "def prompt_router(input):\n",
+    "    query_embeddings = embeddings.embed_query(input['query'])\n",
+    "    similarity = cosine_similarity([query_embeddings],prompt_embeddings)\n",
+    "    most_similar  = prompt_templates[similarity.argmax()]\n",
+    "    print(\"Using MATH\" if most_similar == math_template else \"Using PHYSICS\")\n",
+    "\n",
+    "    return PromptTemplate.from_template(most_similar)\n",
+    "\n",
+    "\n",
+    "chain = (\n",
+    "    {\"query\": RunnablePassthrough()}\n",
+    "    | RunnableLambda(prompt_router)\n",
+    "    | ChatOpenAI()\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "print(chain.invoke(\"What's a black hole\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fde1c244",
    "metadata": {},
    "outputs": [],
    "source": []
